Remove GUI and dependants, clean up pom's a bit