@@ -53,10 +53,12 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
+
         <dependency>
             <groupId>javax.jms</groupId>
             <artifactId>jms</artifactId>
             <version>1.1</version>
+            <scope>provided</scope>
         </dependency>
 
     </dependencies>
@@ -373,7 +375,7 @@
                     <plugin>
                         <groupId>org.apache.felix</groupId>
                         <artifactId>maven-bundle-plugin</artifactId>
-                        <version>2.3.7</version>
+                        <version>3.3.0</version>
                         <extensions>true</extensions>
                         <configuration>
                             <instructions>
@@ -409,143 +411,7 @@
                     </plugin>
                 </plugins>
             </build>
-
         </profile>
-
-
-        <profile>
-            <id>jdk10</id>
-            <properties>
-                <jdk.version>1.10</jdk.version>
-                <maven.compiler.source>1.10</maven.compiler.source>
-                <maven.compiler.target>1.10</maven.compiler.target>
-                <maven.compiler.release>10</maven.compiler.release>
-            </properties>
-            <dependencyManagement>
-                <dependencies>
-                    <dependency>
-                        <groupId>javax.transaction</groupId>
-                        <artifactId>javax.transaction-api</artifactId>
-                        <version>${javax.transaction.transactionapi}</version>
-                    </dependency>
-                </dependencies>
-            </dependencyManagement>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <version>${maven.compiler.version}</version>
-                        <dependencies>
-                            <dependency>
-                                <groupId>org.ow2.asm</groupId>
-                                <artifactId>asm</artifactId>
-                                <version>${maven.asm.version}</version> <!-- Use newer version of ASM -->
-                            </dependency>
-                        </dependencies>
-                        <configuration>
-                            <annotationProcessorPaths>
-                                <annotationProcessorPath>
-                                    <groupId>javax.xml.bind</groupId>
-                                    <artifactId>jaxb-api</artifactId>
-                                    <version>${jaxb.version}</version>
-                                </annotationProcessorPath>
-                            </annotationProcessorPaths>
-                            <compilerArgs>
-                                <arg>-AaddGeneratedAnnotation=false</arg>
-                                <arg>--patch-module</arg>
-                                <arg>java.transaction=${settings.localRepository}/javax/transaction/javax.transaction-api/${javax.transaction.transactionapi}/javax.transaction-api-${javax.transaction.transactionapi}.jar</arg>
-                                <arg>--patch-module</arg>
-                                <arg>java.xml.bind=${settings.localRepository}/javax/xml/bind/jaxb-api/${jaxb.version}/jaxb-api-${jaxb.version}.jar</arg>
-                            </compilerArgs>
-                            <compilerArguments>
-                                <AaddGeneratedAnnotation>false</AaddGeneratedAnnotation>
-                                <Adebug>true</Adebug>
-                            </compilerArguments>
-                            <failOnError>true</failOnError>
-                        </configuration>
-                    </plugin>
-
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-jar-plugin</artifactId>
-                        <version>${maven.jar.version}</version>
-                    </plugin>
-
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>${maven.surefire.version}</version>
-                        <configuration>
-                            <skipTests>true</skipTests>
-                            <argLine>
-                                --illegal-access=permit
-                            </argLine>
-                        </configuration>
-                    </plugin>
-
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-source-plugin</artifactId>
-                        <version>${maven.source.version}</version>
-                    </plugin>
-
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>${maven.javadoc.version}</version>
-                        <configuration>
-                            <detectJavaApiLink>false</detectJavaApiLink>
-                            <offlineLinks>
-                                <offlineLink>
-                                    <url>https://docs.oracle.com/javase/${maven.compiler.release}/docs/api/</url>
-                                    <location>${project.basedir}</location>
-                                </offlineLink>
-                            </offlineLinks>
-                            <failOnError>true</failOnError>
-                            <javadocExecutable>/opt/java-10-openjdk-amd64//bin/javadoc</javadocExecutable>
-                        </configuration>
-                    </plugin>
-
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>build-helper-maven-plugin</artifactId>
-                        <version>${build.helper.maven.plugin.version}</version>
-                        <executions>
-                            <execution>
-                                <id>add-source</id>
-                                <phase>generate-sources</phase>
-                                <goals>
-                                    <goal>add-source</goal>
-                                </goals>
-                                <configuration>
-                                    <sources>
-                                        <source>src/main/java</source>
-                                        <source>src/jre10/java</source>
-                                    </sources>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-
-                <resources>
-                    <resource>
-                        <directory>src/jre10/resources</directory>
-                        <excludes>
-                            <exclude>.gitignore</exclude>
-                        </excludes>
-                    </resource>
-                    <resource>
-                        <directory>src/main/resources</directory>
-                        <excludes>
-                            <exclude>.gitignore</exclude>
-                        </excludes>
-                    </resource>
-                </resources>
-            </build>
-        </profile>
-
 
         <profile>
             <id>jdk11</id>
